--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
 .pink-color{
     color: deeppink;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 100;
 }
@@ -37,5 +37,32 @@ section{
     background-position:right ;
    
 
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 40px rgba(109, 17, 17, 0.199) ;
+    padding: 20px;
+    border-radius: 10px;
+    
+}
+#web-dev-experience{
+    border-left: 7px solid;
+  border-image: linear-gradient(blue,rgb(236, 11, 48));
+  border-image-slice: 1;
+}
+#full-stack{
+    border-left:7px solid ;
+    border-image: linear-gradient(black,yellow);
+    border-image-slice: 1;
+}
+footer p {
+    text-align: center;
 }
 
